@@ -1,5 +1,9 @@
 2008-01-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* erlang.c:
+	    Properly handle r/o share mapping of the aprx.state erlang
+	    dataset.  This mode is used by the  aprx-stat  program.
+
 	* netax25.c, aprx.conf.in, aprx.8.in:
 	    For each AX.25 socket received packet, query reception
 	    interface address and reformat it to TNC2 format.
